Add comment highlighting functionality, modify lexer/parser/validator to add errors to mutated parameter list instead of returning directly, delete ASTParseResult (parser now directly returns ASTNode), improve handling of unknown tokens, improve handling of unclosed block comments